--- a/ShoppingStore/ShoppingStore.csproj
+++ b/ShoppingStore/ShoppingStore.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.JsonLocalization" Version="1.0.0" />
     <PackageReference Include="GenericTagHelper" Version="1.2.0" />
     <PackageReference Include="Localization.AspNetCore.TagHelpers" Version="0.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
