--- a/ShoppingStore/bower.json
+++ b/ShoppingStore/bower.json
@@ -6,6 +6,7 @@
     "jquery": "2.2.0",
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "x-editable": "1.5.1"
+    "x-editable": "1.5.1",
+    "jquery-typeahead": "2.10.1"
   }
 }
