--- a/ShoppingStore/ShoppingStore.csproj
+++ b/ShoppingStore/ShoppingStore.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.JsonLocalization" Version="1.0.0" />
+    <PackageReference Include="automapper" Version="6.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.0.1" />
     <PackageReference Include="GenericTagHelper" Version="1.2.0" />
     <PackageReference Include="Localization.AspNetCore.TagHelpers" Version="0.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -24,6 +26,10 @@
 
   <ItemGroup>
     <None Include="Models\CartLine.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\photos\" />
   </ItemGroup>
 
 </Project>
