--- a/ShoppingStore/appsettings.json
+++ b/ShoppingStore/appsettings.json
@@ -7,5 +7,21 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "Google": {
+    "ClientId": "563822801624-28sr5rr9ngiqe7bcjeg8qmn09khr8fr8.apps.googleusercontent.com",
+    "ClientSecret": "dbdYz3vxhOeiR4Ngf3L_0EAJ"
+  },
+  "Facebook": {
+    "ClientId": "643933675803261",
+    "ClientSecret": "dbb9afb0f34ebb6cfdbb45d4a6965d1b"
+  },
+  "Twitter": {
+    "ConsumerKey": "gFs2HG3vkCYhVjF466VYVZ76o",
+    "ConsumerSecret": "d1wQvKF8BOQ8Uy17TEpjxXY8DQPSdrmsPFBc04m8Rnsz7AL6Qi"
+  },
+  "Microsoft": {
+    "ClientId": "17637aad-7a0a-4b5f-a261-87728f635945",
+    "ClientSecret": "pyjKR44_ooapJLHUH748%&<"
   }
 }
